@@ -1,9 +1,15 @@
+2017-09-08  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/scripts/try_xpath_content.js:
+	Define restoreAllClass function.
+	Define genericListener.listeners.restoreAllClass function.
+
 2017-09-07  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/popup/popup.js:
 	Add event listener(window "unload").
-	
-	* tryXpath/background/try_xpath_background.js: 
+
+	* tryXpath/background/try_xpath_background.js:
 	Define popupState variable.
 	Define genericListener.listeners.storePopupState function.
 	Define genericListener.listeners.requestRestorePopupState function.
